--- a/arch/arm/mach-at91/Kconfig
+++ b/arch/arm/mach-at91/Kconfig
@@ -18,26 +18,22 @@ config HAVE_AT91_DBGU2
 config AT91_USE_OLD_CLK
 	bool
 
-config AT91_PMC_UNIT
-	bool
-	default !ARCH_AT91X40
-
 config COMMON_CLK_AT91
 	bool
-	default AT91_PMC_UNIT && USE_OF && !AT91_USE_OLD_CLK
+	default USE_OF && !AT91_USE_OLD_CLK
 	select COMMON_CLK
 
 config OLD_CLK_AT91
 	bool
-	default AT91_PMC_UNIT && AT91_USE_OLD_CLK
+	default AT91_USE_OLD_CLK
 
 config AT91_SAM9_ALT_RESET
 	bool
-	default !ARCH_AT91X40
+	default y
 
 config AT91_SAM9G45_RESET
 	bool
-	default !ARCH_AT91X40
+	default y
 
 config AT91_SAM9_TIME
 	bool
@@ -70,17 +66,6 @@ menu "Atmel AT91 System-on-Chip"
 choice
 
 	prompt "Core type"
-
-config ARCH_AT91X40
-	bool "ARM7 AT91X40"
-	depends on !MMU
-	select CPU_ARM7TDMI
-	select ARCH_USES_GETTIMEOFFSET
-	select MULTI_IRQ_HANDLER
-	select SPARSE_IRQ
-
-	help
-	  Select this if you are using one of Atmel's AT91X40 SoC.
 
 config SOC_SAM_V4_V5
 	bool "ARM9 AT91SAM9/AT91RM9200"
@@ -207,7 +192,7 @@ config SOC_AT91SAM9N12
 endif # SOC_SAM_V4_V5
 
 
-if SOC_SAM_V4_V5 || ARCH_AT91X40
+if SOC_SAM_V4_V5
 source arch/arm/mach-at91/Kconfig.non_dt
 endif
 
